Chess Club/src/objects/Supervision__c.object
<CustomObject>
    <fields>
        <fullName>Meeting_Supervisor__c</fullName>
        <label>Meeting Supervisor</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipName>Meeting_Supervisors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <formula>Supervisor__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor Registration</label>
        <referenceTo>Supervisor__c</referenceTo>
        <relationshipLabel>Supervisor Bookings</relationshipLabel>
        <relationshipName>Supervisor_Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supervisor Booking</label>
    <nameField>
        <displayFormat>MS-{0}</displayFormat>
        <label>Supervision#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supervisor Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>